--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,7 +49,8 @@ h6 {
 }
 
 p {
-  font-size: 1rem;
+  font-size: 1.25rem;
+  /* @apply "text-lg"; */
   font-weight: 300;
   margin-bottom: 1em;
 }
