--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,6 +50,7 @@ h6 {
 
 p {
   font-size: 1.25rem;
+  color : oklch(44.6% 0.03 256.802);
   /* @apply "text-lg"; */
   font-weight: 300;
   margin-bottom: 1em;
